--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
             <button type="button">9</button>
             <button type="button">0</button>
         </div>
+        <div class="operators">
+            <button type="button" id="ADD">&#x2b;</button>
+            <button type="button" id="SUBTRACT">&#x2212;</button>
+            <button type="button" id="MULTIPLY">&#xd7;</button>
+            <button type="button" id="DIVIDE">&#xf7;</button>
+        </div>
     </body>
 </html>
