Add other tools (equals and clear)

--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
             <button type="button" id="MULTIPLY">&#xd7;</button>
             <button type="button" id="DIVIDE">&#xf7;</button>
         </div>
+        <div class="tools">
+            <button type="button" id="EQUAL">&#x3d;</button>
+            <button type="button" id="CLEAR">CLEAR</button>
+        </div>
     </body>
 </html>
