--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Calculator</title>
     </head>
     <body>
+        <div class="display">
+            <p>This is the calculator display!</p>
+        </div>
         <div class="numpad">
             <button type="button">1</button>
             <button type="button">2</button>
