Add query selector for display text output element to manipulate

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="display">
-            <p>This is the calculator display!</p>
+            <p class="text-output">This is the calculator display!</p>
         </div>
         <div class="numpad">
             <button type="button">1</button>
