--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     </head>
     <body>
         <div class="display">
-            <p class="text-output">This is the calculator display!</p>
+            <p class="text-output"></p>
         </div>
         <div class="numpad">
-            <button type="button">1</button>
-            <button type="button">2</button>
-            <button type="button">3</button>
-            <button type="button">4</button>
-            <button type="button">5</button>
-            <button type="button">6</button>
-            <button type="button">7</button>
-            <button type="button">8</button>
-            <button type="button">9</button>
-            <button type="button">0</button>
+            <button type="button" class="number">1</button>
+            <button type="button" class="number">2</button>
+            <button type="button" class="number">3</button>
+            <button type="button" class="number">4</button>
+            <button type="button" class="number">5</button>
+            <button type="button" class="number">6</button>
+            <button type="button" class="number">7</button>
+            <button type="button" class="number">8</button>
+            <button type="button" class="number">9</button>
+            <button type="button" class="number">0</button>
         </div>
         <div class="operators">
-            <button type="button" id="ADD">&#x2b;</button>
-            <button type="button" id="SUBTRACT">&#x2212;</button>
-            <button type="button" id="MULTIPLY">&#xd7;</button>
-            <button type="button" id="DIVIDE">&#xf7;</button>
+            <button type="button" class="operator">&#x2b;</button>
+            <button type="button" class="operator">&#x2212;</button>
+            <button type="button" class="operator">&#xd7;</button>
+            <button type="button" class="operator">&#xf7;</button>
         </div>
         <div class="tools">
             <button type="button" id="EQUAL">&#x3d;</button>
