Implement single character from display logic

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <div class="tools">
             <button type="button" id="EQUAL">&#x3d;</button>
+            <button type="button" id="DELETE">&#x232B;</button>
             <button type="button" id="CLEAR">CLEAR</button>
         </div>
     </body>
