--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <button type="button" class="number">8</button>
             <button type="button" class="number">9</button>
             <button type="button" class="number">0</button>
+            <button type="button" ID="decimal">.</button>
         </div>
         <div class="operators">
             <button type="button" class="operator">&#x2b;</button>
