--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button type="button" class="number">8</button>
             <button type="button" class="number">9</button>
             <button type="button" class="number">0</button>
-            <button type="button" ID="decimal">.</button>
+            <button type="button" id="DECIMAL">.</button>
         </div>
         <div class="operators">
             <button type="button" class="operator">&#x2b;</button>
