Add keyboard support for operators

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <button type="button" id="DECIMAL">.</button>
         </div>
         <div class="operators">
-            <button type="button" class="operator">&#x2b;</button>
-            <button type="button" class="operator">&#x2212;</button>
-            <button type="button" class="operator">&#xd7;</button>
-            <button type="button" class="operator">&#xf7;</button>
+            <button type="button" class="operator" id="ADD">&#x2b;</button>
+            <button type="button" class="operator" id="SUBTRACT">&#x2212;</button>
+            <button type="button" class="operator" id="MULTIPLY">&#xd7;</button>
+            <button type="button" class="operator" id="DIVIDE">&#xf7;</button>
         </div>
         <div class="tools">
             <button type="button" id="EQUAL">&#x3d;</button>
