Implement keyboard support for clearing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="tools">
             <button type="button" id="EQUAL">&#x3d;</button>
             <button type="button" id="DELETE">&#x232B;</button>
-            <button type="button" id="CLEAR">CLEAR</button>
+            <button type="button" id="CLEAR">C</button>
         </div>
     </body>
 </html>
