--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <button type="button" class="operator" id="DIVIDE">&#xf7;</button>
         </div>
         <div class="tools">
+            <button type="button" id="NEGATIVE">&plusmn;</button>
             <button type="button" id="EQUAL">&#x3d;</button>
             <button type="button" id="DELETE">&#x232B;</button>
             <button type="button" id="CLEAR">C</button>
